--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/postcss": "^4.1.13",
     "firebase": "^11.10.0",
     "postcss": "^8.5.6",
+    "preline": "^3.2.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.23.0",
     "tailwindcss": "^4.1.13",
