--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@schedule-x/angular": "^2.33.0",
+    "@schedule-x/calendar": "^2.36.0",
+    "@schedule-x/theme-default": "^3.2.0",
     "@tailwindcss/postcss": "^4.1.13",
     "firebase": "^11.10.0",
     "postcss": "^8.5.6",
