--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@schedule-x/calendar": "^2.36.0",
     "@schedule-x/theme-default": "^3.2.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "apexcharts": "^5.3.5",
     "firebase": "^11.10.0",
+    "ng-apexcharts": "^1.15.0",
     "postcss": "^8.5.6",
     "preline": "^3.2.3",
     "rxjs": "~7.8.0",
