--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@schedule-x/theme-default": "^3.2.0",
     "@tailwindcss/postcss": "^4.1.13",
     "apexcharts": "^5.3.5",
+    "canvas-confetti": "^1.9.3",
     "firebase": "^11.10.0",
     "ng-apexcharts": "^1.15.0",
     "postcss": "^8.5.6",
@@ -37,6 +38,7 @@
     "@angular-devkit/build-angular": "^19.2.13",
     "@angular/cli": "^19.2.13",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
